@@ -413,7 +413,7 @@ public class TestDirectoryTaxonomyReader extends FacetTestCase {
 
       // check that r1 doesn't see cp_b
       assertEquals(TaxonomyReader.INVALID_ORDINAL, r1.getOrdinal(cp_b));
-      assertNull(r1.getPath(2));
+      expectThrows(IllegalArgumentException.class, () -> r1.getPath(2));
 
       r1.close();
       r2.close();
@@ -570,29 +570,30 @@ public class TestDirectoryTaxonomyReader extends FacetTestCase {
     dir.close();
   }
 
-  public void testBulkPath() throws Exception {
+  public void testCallingBulkPathReturnsCorrectResult() throws Exception {
     Directory src = newDirectory();
     DirectoryTaxonomyWriter w = new DirectoryTaxonomyWriter(src);
-    String arr[] = new String[] {"a", "b", "c", "d", "e"};
+    String randomArray[] = new String[random().nextInt(1000)];
+    Arrays.setAll(randomArray, i -> Integer.toString(random().nextInt()));
 
-    FacetLabel allpaths[] = new FacetLabel[arr.length];
-    int allords[] = new int[arr.length];
+    FacetLabel allPaths[] = new FacetLabel[randomArray.length];
+    int allOrdinals[] = new int[randomArray.length];
 
-    for (int i = 0; i < arr.length; i++) {
-      allpaths[i] = new FacetLabel(arr[i]);
-      w.addCategory(allpaths[i]);
+    for (int i = 0; i < randomArray.length; i++) {
+      allPaths[i] = new FacetLabel(randomArray[i]);
+      w.addCategory(allPaths[i]);
     }
     w.commit();
     w.close();
 
     DirectoryTaxonomyReader r1 = new DirectoryTaxonomyReader(src);
 
-    for (int i = 0; i < allpaths.length; i++) {
-      allords[i] = r1.getOrdinal(allpaths[i]);
+    for (int i = 0; i < allPaths.length; i++) {
+      allOrdinals[i] = r1.getOrdinal(allPaths[i]);
     }
 
-    FacetLabel allBulkpath[] = r1.getBulkPath(allords);
-    assertArrayEquals(allpaths, allBulkpath);
+    FacetLabel allBulkPaths[] = r1.getBulkPath(allOrdinals);
+    assertArrayEquals(allPaths, allBulkPaths);
     r1.close();
     src.close();
   }
